# BotCli

./: .flake8  .gitignore  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  requirements.txt  setup.cfg
.github/: ISSUE_TEMPLATE.md
scripts/: build.ps1  build.sh
src/botcli/: __init__.py  cli.py  generate.py
src/botcli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/botcli/templates/: .pre-commit-config.yaml.template  AUTHORS.md.template  CHANGELOG.md.template  CODE_OF_CONDUCT.md.template  CONTRIBUTING.md.template  Dockerfile.template  README.md.template  launcher.py.template  requirements.txt.template  tox.ini.template
src/botcli/templates/licenses/: LICENSE-apgl.template  LICENSE-bsd2.template  LICENSE-bsd3.template  LICENSE-ccl.template  LICENSE-epl.template  LICENSE-gpl.template  LICENSE-isc.template
src/botcli/templates/scripts/: docker.py.template
src/botcli/templates/src/base/: config.py.template  database.py.template  router.json.template
src/botcli/templates/src/bot/: __init__.py.template  bot.py.template
src/botcli/templates/src/bot/cogs/: example.py.template
src/botcli/templates/tests/: test-db.py.template
