[metadata]
name = botcli
version = 1.0.0
author = Combo Gang
author_email = contact@combogang.com
url = https://github.com/combogangreal/BotCli
description = A cli for generating a discord.py bot structure
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir = 
    =src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    makebot = botcli.cli:generate

[options.data_files]
botcli = templates/*